# video-stabilization

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  conanfile.txt
data/: config.json
doc/: figure.drawio
include/: precomp.h
source/: CMakeLists.txt  dummy.cpp  vstab-basic.cpp  vstab-boost.cpp
